--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ managing law firm websites</em></p>
 <p>Completed quick projects from client intakes to daily operations</p>
 </li>
 </ul>
-<p><strong>Makshaff Services Ltd, Riyadh, Saudi Arabia</strong></p>
+<h3 id="makshaff-services-ltd-riyadh-saudi-arabia">Makshaff Services Ltd, Riyadh, Saudi Arabia</h3>
 <p><strong>Event Project Manager Nov 2009 - Oct 2012</strong></p>
 <ul>
 <li>
@@ -206,5 +206,5 @@ managing law firm websites</em></p>
 
   <!--
     MkDocs version : 1.0.4
-    Build Date UTC : 2020-01-30 01:35:45
+    Build Date UTC : 2020-01-30 01:45:32
   -->
